--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
   <script src="classes/settings.js"></script>
   <script src="classes/hexlib.js" type="text/javascript"></script>
   <script src="classes/hexlib-shapes.js" type="text/javascript"></script>
+  <script src="classes/board.js"></script>
+  <script src="classes/dot.js"></script>
 
 
   <script src="scenes/preload.js"></script>
@@ -157,6 +159,7 @@
   <script src="scenes/games/gridPlus.js"></script>
   <script src="scenes/nonoOptions.js"></script>
   <script src="scenes/mineOptions.js"></script>
+  <script src="scenes/games/slide.js"></script>
   <script src="scenes/help.js"></script>
   <!-- <script src="scenes/selectGame.js"></script> -->
   <!-- <script src="scenes/preview.js"></script> -->
