--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
   <script src="scenes/nonoOptions.js"></script>
   <script src="scenes/mineOptions.js"></script>
   <script src="scenes/games/slide.js"></script>
+  <script src="scenes/games/othello.js"></script>
   <script src="scenes/help.js"></script>
   <!-- <script src="scenes/selectGame.js"></script> -->
   <!-- <script src="scenes/preview.js"></script> -->
